--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,9 @@ psycopg2-binary==2.9.7
 marshmallow==3.20.1
 python-dotenv==1.0.0
 Werkzeug==2.3.7
-gunicorn==21.2.0 
+gunicorn==21.2.0
+python-whois==0.8.0
+dnspython==2.4.2
+requests==2.31.0
+WeasyPrint==61.0
+Jinja2==3.1.3 
