--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "critters": "^0.0.23",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
