--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
