--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "critters": "^0.0.23",
+    "chart.js": "^4.4.3",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "recharts": "^3.1.0"
+    "recharts": "^2.12.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -30,3 +31,4 @@
     "typescript": "^5"
   }
 }
+
