--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "chart.js": "^4.4.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.294.0",
     "next": "^15.0.0",
     "react": "^18",
@@ -31,4 +34,3 @@
     "typescript": "^5"
   }
 }
-
